syntax = "proto3";

package balance_service;
option go_package = "grpc_basic/pb/pb_balance_service";

message BalanceRequest {
  uint32 amount = 1;
  string full_name = 2;
  string email = 3;
}

message Balance {
  uint32 amount = 1;
}


message BalanceResponse {
  Balance balance = 1;
  uint32 time = 2;
}








